whatsapp/darkmode.css
/* ... */
._1yO24 {
  animation: none !important;
}

#app>div>[tabindex] .gQzdc label,
#app>div>[tabindex] ._3qx7_ label {
  border-radius: var(--r-inputs) !important;
}

#app>div>[tabindex] #side>header {
  border-bottom: 1px solid #444d5c !important;
}

#app>div>[tabindex] #side>header+span>div {
  border-bottom: 1px solid #444d5c !important;
}

#app>div>[tabindex] #side>header+span>div [data-icon='x'] svg path {
  fill: #8f8f8f;
}

#app>div>[tabindex] ._14VS3>._1V8rX {
  border-left: 1px solid #444d5c !important;
}

#app>div>[tabindex] ._14VS3>._1V8rX .copyable-area>header {
  border-bottom: none !important;
}

#main>header {
  border-right: none !important;
  border-bottom: 1px solid !important;
  border-color: var(--bg-5) !important;
}

#main>header::after {
  content: unset !important;
}

#main ._1E1g0 {
  text-shadow: 0 1px 0 rgba(var(--fg-3-rgb), 0.2);
}

#main ._9WQEN {
  border: none !important;
}

#main [class *='message-'][data-id]>span+div:not(.urabC)>div {
  box-shadow: 0 1px 0 rgba(var(--shadow-rgb), 0.33) !important;
}

#main .-AOZp ._2oA--+div[style] {
  background-color: var(--bg-4) !important;
}

#main>footer>.copyable-area {
  border-top: 1px solid var(--bg-5) !important;
}

#main>footer+span>._2pAWd {
  border-top: 1px solid var(--bg-5) !important;
  border-left: 1px solid var(--bg-5) !important;
}

#main>footer ._3eShu {
  border-top: 1px solid var(--bg-5) !important;
  border-bottom: 1px solid var(--bg-5) !important;
}

#main>footer ._3uMse {
  border-radius: var(--r-inputs) !important;
}

@media screen and (max-height: 500px) {
  #app>div>[tabindex] {
    min-height: auto;
  }
}

@media screen and (max-width: 648px) {
  #app>div>[tabindex] {
    min-width: auto;
  }
}

@media screen and (max-width: 720px) {

  .two>div:nth-child(3),
  .three>div:nth-child(3) {
    flex: 0 0 80px !important;
    transition: 0.2s ease;
  }

  .two>div:nth-child(3):hover,
  .three>div:nth-child(3):hover,
  .two>div:nth-child(3):focus-within,
  .three>div:nth-child(3):focus-within {
    flex: 0 0 30% !important;
  }

  .two>div:nth-child(2)>div:nth-child(2) {
    flex: 0 0 calc(100% - 80px) !important;
    margin-left: calc(-30% + 80px);
  }

  .two>div:nth-child(3) {
    min-width: 1px !important;
    transition: 0.3s ease !important;
    transition-delay: var(--c-m-delay) !important;
  }

  .two>div:nth-child(3):hover {
    min-width: 349px !important;
    transition-delay: var(--c-m-hover) !important;
    flex: 0 0 30% !important;
  }

  .two> :nth-child(2)> :nth-child(1) {
    z-index: 201 !important;
    flex: 0 0 30% !important;
  }

  .two> :nth-child(2)> :nth-child(1) [style][tabindex] {
    border-right: 1px solid #444d5c !important;
  }

  .two ._1xXdX:hover {
    min-width: 349px !important;
  }

  .three>div:nth-child(2)>div:nth-child(2) {
    flex: 0 0 calc(100% - 30% - 80px) !important;
    margin-left: calc(-30% + 80px);
  }

  .three>div:nth-child(4) {
    flex: 0 0 calc(100% - 30% - 80px) !important;
  }

  .three>div:nth-child(3):hover {
    flex: 0 0 80px !important;
  }

  .three ._14VS3,
  .three ._1xXdX {
    flex: 0 0 30% !important;
    border-color: transparent !important;
  }

  ._3qx7_:not(._3fVV4) label {
    padding: 0px;
  }

  #side>header {
    min-width: 240px;
  }

  #side>header+span {
    display: none;
  }

  #side .eJ0yJ>div:last-child {
    padding-left: 5px !important;
  }

  #side .eJ0yJ ._1582E {
    position: relative;
    flex-direction: row-reverse !important;
  }

  #side .eJ0yJ ._1582E .m61XR {
    z-index: 999 !important;
    margin-left: 0 !important;
    position: absolute;
    left: -41px;
    bottom: -6px;
    border-radius: 50%;
  }

  #side .eJ0yJ ._1582E .m61XR ._15G96 {
    margin: 0;
  }

  #side .eJ0yJ ._1582E .m61XR ._31gEB {
    border: 4px solid #1c2026;
  }

  #side .eJ0yJ ._1582E .m61XR>span {
    display: flex !important;
    flex-direction: row-reverse !important;
  }

  #side .eJ0yJ ._1582E ._38QnI,
  #side .eJ0yJ ._1582E .ZKn2B>*:not(._31gEB) {
    display: none;
  }

  ._616fG {
    overflow: unset !important;
    margin-top: -8px !important;
    margin-left: 0px !important;
    position: absolute !important;
  }

  ._616fG::before {
    content: '' !important;
    z-index: 1 !important;
    position: absolute !important;
    top: -31px !important;
    left: -71px !important;
    height: 53px !important;
    width: 53px !important;
    border-radius: var(--r-avatars) !important;
    box-shadow: inset 0 0 0 3px #859900 !important;
    animation: 2s pulse infinite !important;
  }

  #side .eJ0yJ .zFnXi {
    padding: 1.5px;
    z-index: 101;
    position: absolute;
    margin: -2px 0 0 -75px;
    border: 3px solid #1f232a;
    background-color: #323843 !important;
    border-radius: 50%;
  }

  #side .eJ0yJ .zFnXi>span>svg {
    padding: 2px;
    height: 14px !important;
    width: 14px !important;
  }

  #side .eJ0yJ._13opk ._31gEB,
  #side .eJ0yJ._13opk .zFnXi {
    border-color: #323843 !important;
    background-color: #444d5c !important;
  }

  #side .eJ0yJ:hover:not(._13opk) ._31gEB,
  #side .eJ0yJ:hover:not(._13opk) .zFnXi {
    border-color: #282d37 !important;
  }

  #side ._2kHpK {
    min-width: 80px !important;
  }
}

@keyframes pulse {
  40% {
    opacity: 0;
  }

  80% {
    opacity: 1;
  }
}

